Make bash line in dialog more easily copy/paste-able

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -99,6 +99,11 @@ pre {
   height: 0.9rem;
 }
 
+.bash::before {
+  content: "$";
+  margin-right: 1ex;
+}
+
 // Utility class for underlining first letter in a text
 .underlineFirstLetter::first-letter {
   text-decoration: underline;
