--- a/frontend/src/assets/css/variables.scss
+++ b/frontend/src/assets/css/variables.scss
@@ -80,8 +80,14 @@ $m1-2-font-size-base: $font-size-base / 2; // m1-2 = multiply by 1/2
 // Layout sizing
 $sidebar-width: 250px;
 $content-max-width: 730px;
+$header-height: 3.5rem;
 
 // Custom values for full screen use.
 $fullscreen-button: 2rem;
 $fullscreen-padding: 0.75rem;
-$fullscreen-padding-top: 3.5rem;
+$fullscreen-padding-top: $header-height;
+
+$overlayBtn-height: 2.5rem;
+$overlayBtn-width: 2.5rem;
+$overlayBtn-opacity-visible: 0.25;
+$overlayBtn-opacity-active: 0.75;
