--- a/frontend/src/components/core/ReportView/ReportView.scss
+++ b/frontend/src/components/core/ReportView/ReportView.scss
@@ -23,7 +23,7 @@
   align-items: stretch;
   align-content: flex-start;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 
   &.--wide {
     .main {
