--- a/frontend/src/assets/css/header.scss
+++ b/frontend/src/assets/css/header.scss
@@ -14,8 +14,7 @@
  * limitations under the License.
  */
 
-@import 'src/assets/css/variables';
-
+@import "src/assets/css/variables";
 
 header {
   position: fixed;
@@ -27,7 +26,12 @@ header {
 }
 
 .streamlit-wide header {
-  background-image: linear-gradient(180deg, #ffffff 25%, rgba(255, 255, 255, 0.5) 75%, transparent);
+  background-image: linear-gradient(
+    180deg,
+    #ffffff 25%,
+    rgba(255, 255, 255, 0.5) 75%,
+    transparent
+  );
 }
 
 header .decoration {
@@ -36,47 +40,8 @@ header .decoration {
   right: 0;
   left: 0;
   height: 2px;
-  background-image: linear-gradient(90deg, #F63366, #FFFD80);
+  background-image: linear-gradient(90deg, #f63366, #fffd80);
   z-index: $z-index-header;
-}
-
-header > nav {
-  position: absolute;
-  top: 0;
-  left: 1rem;
-  height: 3.5rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-weight: 700;
-  line-height: 1.5;
-}
-
-header > nav {
-  a {
-    color: $black;
-    background: $white;
-    border-radius: $border-radius-large;
-    padding: 0 $m1-2-font-size-base;
-    margin: 0 -$m1-2-font-size-base;
-    border: 1px solid transparent;
-  }
-
-  a:visited {
-    color: $black;
-  }
-
-  a:active,
-  a:hover {
-    color: $primary;
-    text-decoration: none;
-  }
-
-  a:focus {
-    border: 1px solid $primary;
-    box-shadow: 0 0 0 0.2rem $primary-a50;
-    outline: none;
-  }
 }
 
 header > .toolbar {
