--- a/frontend/src/components/core/StatusWidget/StatusWidget.scss
+++ b/frontend/src/components/core/StatusWidget/StatusWidget.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-@import 'src/assets/css/variables';
+@import "src/assets/css/variables";
 
 /**
  * @license
@@ -40,16 +40,12 @@
   margin: 0 1rem 0 0.5rem;
   white-space: nowrap;
   max-width: 20rem;
-  transition:
-      opacity 500ms 0ms,
-      clip 500ms 0ms,
-      max-width 500ms 0ms,
-      margin 500ms 0ms,
-      visibility 0ms 500ms;
+  transition: opacity 500ms 0ms, clip 500ms 0ms, max-width 500ms 0ms,
+    margin 500ms 0ms, visibility 0ms 500ms;
 }
 
-#ConnectionStatus svg * {
-  fill: $gray-700;
+#ConnectionStatus .icon {
+  color: $gray;
 }
 
 #ConnectionStatus.minimized label {
@@ -83,6 +79,7 @@
   margin: 0 0 0 1rem;
   white-space: nowrap;
   max-width: 20rem;
+  height: 1rem;
 }
 
 #ReportStatus label.prompt {
@@ -99,8 +96,10 @@
   white-space: nowrap;
 }
 
-#ReportStatus svg.icon {
-  fill: $gray-700;
+#ReportStatus .icon {
+  color: $gray-700;
+  display: inline-flex;
+  font-size: 1rem;
   width: 1rem;
   height: 1rem;
   margin-right: 0.5rem;
@@ -160,17 +159,12 @@ $anim-easing: ease-out;
   max-width: 0;
   min-width: 0;
   border: 0;
-  transition:
-    opacity $anim-time $anim-easing 0s,
-    clip $anim-time $anim-easing 0s,
-    min-width $anim-time $anim-easing 0s,
-    max-width $anim-time $anim-easing 0s,
-    padding $anim-time $anim-easing 0s,
-
+  transition: opacity $anim-time $anim-easing 0s,
+    clip $anim-time $anim-easing 0s, min-width $anim-time $anim-easing 0s,
+    max-width $anim-time $anim-easing 0s, padding $anim-time $anim-easing 0s,
     // Hide at end of the transition
-    visibility 0s $anim-easing $anim-time;
+      visibility 0s $anim-easing $anim-time;
 }
-
 
 // "Source file changed. Rerun?" minimize animation
 // (Buttons are hidden)
@@ -184,30 +178,22 @@ $anim-easing: ease-out;
   max-width: 0;
   min-width: 0;
   border: 0;
-  transition:
-    opacity $anim-time $anim-easing 0s,
-    clip $anim-time $anim-easing 0s,
-    min-width $anim-time $anim-easing 0s,
-    max-width $anim-time $anim-easing 0s,
-    margin $anim-time $anim-easing 0s,
+  transition: opacity $anim-time $anim-easing 0s,
+    clip $anim-time $anim-easing 0s, min-width $anim-time $anim-easing 0s,
+    max-width $anim-time $anim-easing 0s, margin $anim-time $anim-easing 0s,
     padding $anim-time $anim-easing 0s,
-
-      // Hide at end of the transition
-    visibility 0s $anim-easing $anim-time;
+    // Hide at end of the transition
+      visibility 0s $anim-easing $anim-time;
 }
 
 // Minimized -> Unminimized animation
 #ReportStatus label,
 #ReportStatus button,
 #ReportStatus button * {
-  transition:
-    opacity $anim-time $anim-easing 0s,
-    clip $anim-time $anim-easing 0s,
-    min-width $anim-time $anim-easing 0s,
-    max-width $anim-time $anim-easing 0s,
-    margin $anim-time $anim-easing 0s,
+  transition: opacity $anim-time $anim-easing 0s,
+    clip $anim-time $anim-easing 0s, min-width $anim-time $anim-easing 0s,
+    max-width $anim-time $anim-easing 0s, margin $anim-time $anim-easing 0s,
     padding $anim-time $anim-easing 0s,
-
     // Show immediately
-    visibility 0s;
+      visibility 0s;
 }
