--- a/frontend/src/assets/css/theme.scss
+++ b/frontend/src/assets/css/theme.scss
@@ -14,9 +14,9 @@
  * limitations under the License.
  */
 
-@import 'variables';
-@import 'fonts';
-@import '~bootstrap/scss/bootstrap';
+@import "variables";
+@import "fonts";
+@import "~bootstrap/scss/bootstrap";
 
 // Use this file to override specific bootstrap styles.
 
@@ -33,7 +33,7 @@
 .btn-outline-info {
   background-color: $white;
   border-color: $gray-lighter;
-  color: $gray-dark;
+  color: $gray-darker;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):hover,
@@ -65,7 +65,7 @@
 }
 
 ::-webkit-scrollbar {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   border-radius: 100px;
   height: 6px;
   width: 6px;
