--- a/frontend/src/assets/css/theme.scss
+++ b/frontend/src/assets/css/theme.scss
@@ -64,6 +64,30 @@
   color: $white;
 }
 
+// Make alert boxes work on different backgrounds.
+
+.alert-success {
+  background: change-color($green, $alpha: 0.2);
+  border-color: change-color($green, $alpha: 0.2);
+}
+
+.alert-info {
+  background: change-color($blue, $alpha: 0.2);
+  border-color: change-color($blue, $alpha: 0.2);
+}
+
+.alert-warning {
+  background: change-color($yellow, $alpha: 0.2);
+  border-color: change-color($yellow, $alpha: 0.8);
+}
+
+.alert-danger {
+  background: change-color($red, $alpha: 0.2);
+  border-color: change-color($red, $alpha: 0.2);
+}
+
+// Make scrollbars awesome on Chrome.
+
 ::-webkit-scrollbar {
   background-color: transparent;
   border-radius: 100px;
