Remove unnecessary wrapper classed "streamlit-container"

--- a/frontend/src/components/elements/DataFrame/DataFrame.scss
+++ b/frontend/src/components/elements/DataFrame/DataFrame.scss
@@ -16,7 +16,7 @@
 
 @import "src/assets/css/variables";
 
-.streamlit-container {
+.reportview-container {
   .dataframe {
     font-size: 0.8rem;
     font-family: "IBM Plex Mono", monospace;
