--- a/frontend/src/components/elements/Table/Table.scss
+++ b/frontend/src/components/elements/Table/Table.scss
@@ -14,29 +14,31 @@
  * limitations under the License.
  */
 
-.streamlit-container .streamlit-table {
-  font-size: 0.8rem;
-  font-family: 'IBM Plex Mono', monospace;
-  text-align: right;
-  padding: 0.5rem;
-  line-height: 1.3;
-}
+.reportview-container {
+  .streamlit-table {
+    font-size: 0.8rem;
+    font-family: "IBM Plex Mono", monospace;
+    text-align: right;
+    padding: 0.5rem;
+    line-height: 1.3;
+  }
 
-.streamlit-container .streamlit-table th {
-  border-bottom: 1px solid #dee2e6;
-  vertical-align: middle;
-}
+  .streamlit-table th {
+    border-bottom: 1px solid #dee2e6;
+    vertical-align: middle;
+  }
 
-.streamlit-container .streamlit-table td {
-  vertical-align: middle;
-  border-top: 1px solid #dee2e6;
-  border-bottom: 1px solid #dee2e6;
-}
+  .streamlit-table td {
+    vertical-align: middle;
+    border-top: 1px solid #dee2e6;
+    border-bottom: 1px solid #dee2e6;
+  }
 
-.streamlit-container .streamlit-table .empty-table td {
-  color: #768096;
-  font-style: italic;
-  font-size: 0.8rem;
-  text-align: center;
-  border-bottom: 1px solid #dee2e6;
+  .streamlit-table .empty-table td {
+    color: #768096;
+    font-style: italic;
+    font-size: 0.8rem;
+    text-align: center;
+    border-bottom: 1px solid #dee2e6;
+  }
 }
