--- a/frontend/src/components/elements/ImageList/ImageList.scss
+++ b/frontend/src/components/elements/ImageList/ImageList.scss
@@ -14,16 +14,18 @@
  * limitations under the License.
  */
 
-@import 'src/assets/css/variables';
+@import "src/assets/css/variables";
 
-.streamlit-container .image-container {
-  display: inline-flex;
-  flex-direction: column;
-  margin-right: $font-size-sm;
-}
+.reportview-container {
+  .image-container {
+    display: inline-flex;
+    flex-direction: column;
+    margin-right: $font-size-sm;
+  }
 
-.streamlit-container .caption {
-  font-family: $font-family-monospace;
-  font-size: $font-size-sm;
-  text-align: center;
+  .caption {
+    font-family: $font-family-monospace;
+    font-size: $font-size-sm;
+    text-align: center;
+  }
 }
