Improve progress bar CSS in sidebar

--- a/frontend/src/components/core/Sidebar/Sidebar.scss
+++ b/frontend/src/components/core/Sidebar/Sidebar.scss
@@ -82,6 +82,14 @@
       font-weight: 300;
       text-transform: uppercase;
     }
+
+    .progress {
+      background-color: $gray-light;
+    }
+
+    .progress-bar {
+      background-color: $blue;
+    }
   }
 
   .sidebar-collapse-control {
