--- a/frontend/src/components/core/ReportView/ReportView.scss
+++ b/frontend/src/components/core/ReportView/ReportView.scss
@@ -58,7 +58,7 @@
     }
 
     footer {
-      color: $gray;
+      color: $gray-500;
       flex: 0;
       font-size: $font-size-sm;
       max-width: $content-max-width;
@@ -66,13 +66,20 @@
       width: 100%;
 
       a {
-        color: $gray;
-        text-decoration: underline;
+        color: $gray-500;
         transition: color 300ms;
       }
 
+      &:hover {
+        color: $gray;
+      }
+
       &:hover a {
-        color: $black;
+        color: $gray-dark;
+      }
+
+      a:hover {
+        text-decoration: underline;
       }
     }
   }
