Make <pre> in <alert> have transparent background

--- a/frontend/src/components/elements/Text/Text.scss
+++ b/frontend/src/components/elements/Text/Text.scss
@@ -73,6 +73,10 @@
       color: inherit;
     }
 
+    pre {
+      background: transparent;
+    }
+
     a {
       color: inherit;
       text-decoration: underline;
