Fix scrollability with arrow keys.

--- a/frontend/src/assets/css/variables.scss
+++ b/frontend/src/assets/css/variables.scss
@@ -73,6 +73,7 @@ $btn-border-radius: $border-radius-large;
 $z-index-popup-menu: 140;
 $z-index-header: 120;
 $z-index-sidebar: 100;
+$z-index-sidebar-mobile: 130;
 
 // Custom values for our own use.
 $m1-2-font-size-sm: $font-size-sm / 2; // m1-2 = multiply by 1/2
