unset all bootstrap H clases

--- a/frontend/src/assets/css/theme.scss
+++ b/frontend/src/assets/css/theme.scss
@@ -17,6 +17,17 @@
 @import "variables";
 @import "fonts";
 @import "~bootstrap/scss/bootstrap";
+// IMPORTANT! Add this ".h1, .h2, .h3, .h4, .h5, .h6 unset" just after import bootstrap libraries
+// Styletron creates classes called h1, h2, etc., which conflict with Bootstrap classes.
+// So we have to override the bootstrap classes here. (We should not use this classes in our project)
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  all: unset;
+}
 
 // Use this file to override specific bootstrap styles.
 
