Closing sidebar when clicking outside

--- a/frontend/src/components/core/Sidebar/Sidebar.scss
+++ b/frontend/src/components/core/Sidebar/Sidebar.scss
@@ -1,6 +1,15 @@
 @import "src/assets/css/theme";
 
 .sidebar {
+  @media (max-width: 746px) {
+    margin-left: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
   &.--collapsed {
     .sidebar-content {
       margin-left: -$sidebar-width;
