--- a/frontend/src/components/core/Sidebar/Sidebar.scss
+++ b/frontend/src/components/core/Sidebar/Sidebar.scss
@@ -30,10 +30,15 @@
     width: $sidebar-width;
     z-index: $z-index-sidebar;
 
+    &:focus {
+      outline: none;
+    }
+
     @include media-breakpoint-down(md) {
       box-shadow: 0 0 2rem #a3a8b488;
       background-color: $gray-100;
       background-image: none;
+      z-index: $z-index-sidebar-mobile;
     }
 
     .sidebar-close {
@@ -81,6 +86,14 @@
       font-size: $font-size-sm;
       font-weight: 300;
       text-transform: uppercase;
+    }
+
+    .progress {
+      background-color: $gray-light;
+    }
+
+    .progress-bar {
+      background-color: $blue;
     }
   }
 
