Fullscreen button to expand tables and charts (#137)
* add new component FullScreenWrapper

* fix DataFrame height

* block scroll on modal

* add escape to exit fullscreen

* add fullscreen feature for VegaLiteChart, DeckGlChart, GraphVizChart, PlotlyChart, BokehChart (now responsive) and ImageList

* bokeh width and height are optional

* fix test

* add validation to BokehChart

* Update overlay button styles.

* improve code

* add open-iconic font and run make headers

* implement getChartDimensions fucntion for charts

* implemment SCSS_VARS values to calculate fullscreen dimension

* improve vega lite view

* remove comment

* remove default height

* update ignore_cache with ignore_hash on lib/streamlit/hashing.py

* improve vega-lite padding solution

* fix wrong symbol

* improve logic with padding.bottom = Math.max(padding.bottom, FIX_PADDING_BOTTOM)

* delete magic.py from examples

* remove FullScreenWrapper from Block switch

* remove height prop from Table

* remove warnings

* delete unused files

--- a/frontend/src/components/core/StatusWidget/StatusWidget.scss
+++ b/frontend/src/components/core/StatusWidget/StatusWidget.scss
@@ -44,8 +44,8 @@
     margin 500ms 0ms, visibility 0ms 500ms;
 }
 
-#ConnectionStatus svg * {
-  fill: $gray-700;
+#ConnectionStatus .icon {
+  color: $gray;
 }
 
 #ConnectionStatus.minimized label {
@@ -79,6 +79,7 @@
   margin: 0 0 0 1rem;
   white-space: nowrap;
   max-width: 20rem;
+  height: 1rem;
 }
 
 #ReportStatus label.prompt {
@@ -95,8 +96,10 @@
   white-space: nowrap;
 }
 
-#ReportStatus svg.icon {
-  fill: $gray-700;
+#ReportStatus .icon {
+  color: $gray-700;
+  display: inline-flex;
+  font-size: 1rem;
   width: 1rem;
   height: 1rem;
   margin-right: 0.5rem;
