--- a/frontend/src/components/elements/DataFrame/DataFrame.scss
+++ b/frontend/src/components/elements/DataFrame/DataFrame.scss
@@ -91,8 +91,8 @@
   }
 
   .sort-arrow-icon {
-    width: 0.7rem;
-    height: 0.7rem;
+    font-size: 0.7rem;
+    margin-right: 0.1rem;
     opacity: 0.3;
   }
 }
