--- a/frontend/src/assets/css/variables.scss
+++ b/frontend/src/assets/css/variables.scss
@@ -82,10 +82,21 @@ $m2-3-font-size-sm: $font-size-sm * 2 / 3; // m2-3 = multiply by 2/3
 $m1-2-font-size-base: $font-size-base / 2; // m1-2 = multiply by 1/2
 
 // Layout sizing
+$sidebar-width: 250px;
+$content-max-width: 730px; // This number comes from bootstrap.
+$header-height: 3.5rem;
+
+// Custom values for full screen use.
+$fullscreen-button: 2rem;
+$fullscreen-padding: 0.75rem;
+$fullscreen-padding-top: $header-height;
+
+$overlayBtn-height: 2.5rem;
+$overlayBtn-width: 2.5rem;
+$overlayBtn-opacity-visible: 0.25;
+$overlayBtn-opacity-active: 0.75;
 $top-margin: 5rem;
 $bottom-margin: $top-margin * 2;
-$sidebar-width: 21rem;
-$content-max-width: 730px; // This number comes from bootstrap.
 
 // Animation settings
 $normal-animation-duration: 300ms;
