--- a/frontend/src/components/core/StreamlitDialog/StreamlitDialog.scss
+++ b/frontend/src/components/core/StreamlitDialog/StreamlitDialog.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-@import '../../../assets/css/variables';
+@import "../../../assets/css/variables";
 
 .streamlit-upload-first-line {
   margin-bottom: 0.5rem;
@@ -32,10 +32,10 @@
 }
 
 /* We make this an id instead of a class to enable clipboard copy */
-#streamlit-upload-url {
-  word-wrap: break-word;
+#streamlit-upload-url pre {
   font-family: $font-family-monospace;
   font-size: $font-size-sm;
+  white-space: normal;
 }
 
 h5.modal-title {
@@ -45,4 +45,11 @@ h5.modal-title {
   font-weight: 300;
   line-height: 1.5;
   text-transform: none;
+}
+
+// This pushes everything after it to the right, so that our
+// Copy To Clipboard button is left-aligned
+.streamlit-dialog .modal-footer .push {
+  margin-left: auto;
+  margin-right: 0;
 }
