--- a/frontend/src/components/elements/DataFrame/DataFrame.scss
+++ b/frontend/src/components/elements/DataFrame/DataFrame.scss
@@ -91,8 +91,9 @@
   }
 
   .sort-arrow-icon {
-    font-size: 0.7rem;
-    margin-right: 0.1rem;
+    font-size: 0.5rem;
+    margin-right: 0.25rem;
     opacity: 0.3;
+    vertical-align: top;
   }
 }
