Improve the way hashing warning looks (and any other markdown in alert box)

--- a/frontend/src/assets/css/variables.scss
+++ b/frontend/src/assets/css/variables.scss
@@ -51,6 +51,7 @@ $light: $gray-100;
 $dark: $gray;
 
 $primary-a50: change-color($primary, $alpha: 0.5);
+$white-a50: #ffffff88;
 
 // Overwrite some theme fonts settings.
 $font-family-sans-serif: "IBM Plex Sans", sans-serif;
