--- a/frontend/src/components/elements/Text/Text.scss
+++ b/frontend/src/components/elements/Text/Text.scss
@@ -47,10 +47,10 @@
       padding: 6px 13px;
       border: 1px solid $gray-lighter;
     }
-  }
 
-  .markdown-text-container table tr:nth-child(2n) {
-    background: $gray-faint;
+    text-container table tr:nth-child(2n) {
+      background: $gray-faint;
+    }
   }
 
   pre.error {
@@ -67,19 +67,23 @@
   }
 
   .alert {
-    margin: 0;
+    .markdown-text-container {
+      margin: 0;
 
-    code {
-      color: inherit;
-    }
+      code,
+      pre {
+        background: $white-a50;
 
-    pre {
-      background: transparent;
-    }
+        code,
+        pre {
+          background: none;
+        }
+      }
 
-    a {
-      color: inherit;
-      text-decoration: underline;
+      a {
+        color: inherit;
+        text-decoration: underline;
+      }
     }
   }
 }
