--- a/frontend/src/components/core/StreamlitDialog/StreamlitDialog.scss
+++ b/frontend/src/components/core/StreamlitDialog/StreamlitDialog.scss
@@ -32,10 +32,11 @@
 }
 
 /* We make this an id instead of a class to enable clipboard copy */
-#streamlit-upload-url pre {
+#streamlit-upload-url {
   font-family: $font-family-monospace;
   font-size: $font-size-sm;
   white-space: normal;
+  word-wrap: break-word;
 }
 
 h5.modal-title {
