--- a/frontend/src/components/widgets/NumberInput/NumberInput.scss
+++ b/frontend/src/components/widgets/NumberInput/NumberInput.scss
@@ -15,11 +15,45 @@
  */
 
 .stNumberInput {
-  input[type="number"] {
-    &::-webkit-inner-spin-button,
-    &::-webkit-outer-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
+  div.input-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+
+    input[type="number"] {
+      &::-webkit-inner-spin-button,
+      &::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    }
+
+    div.controls {
+      height: 49px;
+      display: flex;
+      flex-direction: row;
+
+      .control {
+        margin: 0;
+        height: 100%;
+        display: flex;
+        cursor: pointer;
+        padding: 0 15px;
+        align-items: center;
+        background-color: rgb(230, 234, 241);
+        transition: all ease-in 0.2s;
+
+        &:hover {
+          color: white;
+          background-color: rgb(246, 51, 102);
+        }
+
+        &:last-child {
+          border-top-right-radius: 4px;
+          border-bottom-right-radius: 4px;
+        }
+      }
     }
   }
 
