Remove extra margin that snuck into alert elements

--- a/frontend/src/components/elements/Text/Text.scss
+++ b/frontend/src/components/elements/Text/Text.scss
@@ -70,6 +70,10 @@
     .markdown-text-container {
       margin: 0;
 
+      & :last-child {
+        margin-bottom: 0;
+      }
+
       code,
       pre {
         background: $white-a50;
