--- a/frontend/src/components/widgets/NumberInput/NumberInput.scss
+++ b/frontend/src/components/widgets/NumberInput/NumberInput.scss
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+@import "src/assets/css/variables";
+
 .stNumberInput {
   $controls-width: 45px;
 
@@ -55,6 +57,14 @@
         &:last-child {
           border-top-right-radius: 4px;
           border-bottom-right-radius: 4px;
+        }
+
+        .open-iconic {
+          font-size: $font-size-base / 2;
+
+          svg {
+            fill: $gray;
+          }
         }
       }
     }
