--- a/frontend/src/components/widgets/NumberInput/NumberInput.scss
+++ b/frontend/src/components/widgets/NumberInput/NumberInput.scss
@@ -40,6 +40,7 @@
 
       .control {
         margin: 0;
+        border: 0;
         height: 100%;
         display: flex;
         cursor: pointer;
@@ -54,6 +55,12 @@
           color: $white;
           background-color: $primary;
           transition: none;
+        }
+
+        &:active,
+        &:focus {
+          outline: none;
+          border: none;
         }
 
         &:last-child {
