Fixing focus behavior and adding number_input to docs

--- a/frontend/src/components/widgets/NumberInput/NumberInput.scss
+++ b/frontend/src/components/widgets/NumberInput/NumberInput.scss
@@ -51,14 +51,15 @@
           background-color $normal-animation-duration;
         background-color: $gray-lighter;
 
-        &:hover {
+        &:hover,
+        &:focus {
           color: $white;
           background-color: $primary;
           transition: none;
+          outline: none;
         }
 
-        &:active,
-        &:focus {
+        &:active {
           outline: none;
           border: none;
         }
