add new error message format in file_uploader widget

--- a/frontend/src/components/widgets/FileUploader/FileUploader.scss
+++ b/frontend/src/components/widgets/FileUploader/FileUploader.scss
@@ -14,6 +14,55 @@
  * limitations under the License.
  */
 
+@import "src/assets/css/variables";
+
 .file-uploader button:focus {
   outline: 0;
+}
+
+.file-uploader-error {
+  outline: 0;
+  line-height: 1.6;
+  font-weight: normal;
+  font-size: 1rem;
+  font-family: "IBM Plex Sans", sans-serif;
+
+  height: 10rem;
+  -webkit-box-pack: center;
+  justify-content: center;
+  width: 100%;
+  padding-left: 1rem;
+  padding-bottom: 32px;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  outline: 0px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  display: flex;
+  box-sizing: border-box;
+  border-width: 2px;
+  border-color: rgb(128, 132, 149);
+  background-color: rgb(240, 242, 246);
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+.file-uploader-error__text {
+  line-height: 1.6;
+  font-weight: normal;
+  font-size: 1rem;
+  font-family: "IBM Plex Sans", sans-serif;
+  box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  color: $red;
+}
+
+.file-uploader-error__button {
+  margin-top: 2rem;
+  color: $red;
 }
