--- a/frontend/src/components/elements/Alert/Alert.scss
+++ b/frontend/src/components/elements/Alert/Alert.scss
@@ -33,7 +33,7 @@
     }
 
     pre code {
-      // Default color for syntax hilighting.
+      // Default color for syntax highlighting.
       color: $black;
     }
 
